<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_step_goal"
        android:icon="@drawable/ic_edit_step_goal"
        android:title="@string/edit_step_goal"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/add_step_entry"
        android:icon="@drawable/ic_add_weight"
        android:title="@string/add_steps_entry"
        app:showAsAction="collapseActionView">
    </item>
    <item
        android:id="@+id/view_week_statistics"
        android:icon="@drawable/ic_day_staistics"
        android:title="@string/view_weekly_statistics"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_all"
        android:title="@string/clear_step_history"
        app:showAsAction="collapseActionView"/>
</menu>