<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_fname"/>
        <EditText
            android:id="@+id/register_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fname_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_lname"/>
        <EditText
            android:id="@+id/register_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lname_hint"/>
    </LinearLayout>

</LinearLayout>