<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_walk"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="32dp"/>
    <TextView
        android:id="@+id/steps_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_default"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp">
        <ToggleButton
            android:id="@+id/walk_start_stop"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/end_walk"
            android:textOff="@string/start_walk"/>
    </LinearLayout>
</LinearLayout>